# cs372

lab01/blink/: blink.ino
lab01/kitt/: kitt.cpp  kitt.h  kitt.ino
week04/counter/: Makefile  counter.ino  debounce.cpp  debounce.h  display.cpp  display.h  types.h
week05/motor/: Makefile  display.cpp  motor.ino  types.h
week06/lcd/: lcd.ino
week07/triangle/: DACOscillate.h  Makefile  main.cpp  triangle.ino  types.h
week08/hall-effect/: Makefile  hall-effect.ino  hall_effect.cpp  hall_effect.h  types.h
week09/sram/: Makefile  ParallelSRAM.cpp  ParallelSRAM.h  sram.ino
week10/: CMakeLists.txt  Makefile  cs372ecc.cpp  cs372ecc.h  test_ecc.cpp
week11/eeprom/: .clang-format  CS372EEPROM.cpp  CS372EEPROM.h  Makefile  eeprom.ino
week13/stepper/: Makefile  stepper.ino
